--- a/netdata-config/exporting.conf
+++ b/netdata-config/exporting.conf
@@ -1,28 +1,45 @@
 # netdata-config/exporting.conf
-[exporting:global]
-    enabled = yes
-    send configured labels = yes
-    send automatic labels = no
-    send charts matching = *
-    send hosts matching = *
-    send names instead of ids = yes
-    update every = 10
-
-[json:clickhouse]
-    enabled = yes
-    destination = netdata-proxy:8080
-    data source = average
-    hostname = %H
-    prefix = netdata
-    update every = 60
-    buffer on failures = 10
-    timeout ms = 10000
-
-    # Minimal charts to reduce payload size
-    send charts matching = system.cpu disk_space.*
-    send hosts matching = *
-
-    # Format settings
-    format = json
-    # Try connection keep-alive settings
-    send names instead of ids = yes
+#[exporting:global]
+#    enabled = yes
+#    send configured labels = yes
+#    send automatic labels = no
+#    send charts matching = *
+#    send hosts matching = *
+#    send names instead of ids = yes
+#    update every = 10
+#
+#[json:clickhouse_avg]
+#    enabled = yes
+#    destination = netdata-proxy:8081
+#    data source = average
+#    hostname = %H
+#    prefix = netdata_avg
+#    update every = 60
+#    buffer on failures = 10
+#    timeout ms = 10000
+#
+#    # Minimal charts to reduce payload size
+#    send charts matching = system.cpu disk_space.*
+#    send hosts matching = *
+#
+#    # Format settings
+#    format = json
+#    send names instead of ids = yes
+#
+#[json:clickhouse_max]
+#    enabled = yes
+#    destination = netdata-proxy:8082
+#    data source = maximum
+#    hostname = %H
+#    prefix = netdata_max
+#    update every = 60
+#    buffer on failures = 10
+#    timeout ms = 10000
+#
+#    # Minimal charts to reduce payload size
+#    send charts matching = system.cpu disk_space.*
+#    send hosts matching = *
+#
+#    # Format settings
+#    format = json
+#    send names instead of ids = yes
